# sample-plugin

./: CLAUDE.md  README.md  catalog-info.yaml
.github/workflows/: backend-ci.yml  ci.yml  pypi-publish.yml  release.yml
backend/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py  test_settings.py  tox.ini
backend/docs/: conf.py
backend/docs/how-tos/: index.rst
backend/requirements/: base.in  base.txt  ci.txt  dev.txt  doc.txt  pip-tools.txt  pip.txt  quality.txt  test.txt
backend/sample_plugin/: __init__.py  apps.py  models.py  pipeline.py  serializers.py  signals.py  urls.py  views.py
backend/sample_plugin/migrations/: 0001_initial.py
backend/sample_plugin/settings/: common.py  production.py  test.py
backend/tests/: test_api.py  test_models.py
brand/: README.md
brand/src/: .gitignore  README.md  package-lock.json  package.json
brand/src/tokens/src/themes/light/global/: color.json
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: index.jsx  plugin.jsx
platform-plugin-sample/: README.md  pyproject.toml  test_settings.py  tox.ini
platform-plugin-sample/docs/: conf.py  index.rst  testing.rst
platform-plugin-sample/src/openedx_sample_plugin/: __init__.py  apps.py  models.py  pipeline.py  serializers.py  signals.py  urls.py  views.py
platform-plugin-sample/src/openedx_sample_plugin/settings/: common.py  production.py  test.py
platform-plugin-sample/tests/: test_api.py  test_models.py  test_plugin_integration.py
tutor/: README.md  pyproject.toml  sample_plugin.py
tutor/tutorsampleplugin/: plugin.py
