[build-system]
requires = ["setuptools", "setuptools-scm>8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "openedx-sample-plugin"
description = "A sample backend plugin for the Open edX Platform"
requires-python = ">=3.11"
license="Apache-2.0"
authors = [
    {name = "Open edX Project", email = "oscm@openedx.org"},
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Framework :: Django',
    'Framework :: Django :: 4.2',
    'Intended Audience :: Developers',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.12',
]
keywords = [
    "Python",
    "edx",
]

dynamic = ["readme", "dependencies", "version"]

[project.entry-points."lms.djangoapp"]
sample_plugin = "sample_plugin.apps:SamplePluginConfig"

[project.entry-points."cms.djangoapp"]
sample_plugin = "sample_plugin.apps:SamplePluginConfig"

[project.urls]
Homepage = "https://openedx.org/openedx/sample-plugin"
Repository = "https://openedx.org/openedx/sample-plugin"

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown" }
dependencies = {file = "requirements/base.in"}

[tool.setuptools.packages.find]
include = ["sample_plugin*"]
exclude = ["sample_plugin.tests*"]

[tool.semantic_release]
build_command = "pip install build && python -m build"

[tool.semantic_release.commit_parser_options]
# Because this repo is meant to be an example, docs changes are relevant
# feature changes and so should produces new releases.
minor_tags = ["feat", "docs"]

[tool.setuptools_scm]
# The root for the gith repo is one directory up.
root = ".."
version_scheme = 'only-version'
local_scheme = 'no-local-version'
